# the-repo

./: .gitignore  README.md
rust/clap_cli/: Cargo.toml
rust/clap_cli/src/: main.rs
rust/clap_cli/tests/: cli.rs
rust/client_pool/: Cargo.toml
rust/client_pool/src/: main.rs
rust/drop_trait/src/: main.rs
rust/json_diffs/: Cargo.toml
rust/json_diffs/src/: main.rs
rust/matching/src/: main.rs
rust/mock_objects/src/: lib.rs
rust/spawn_threads/: Cargo.toml
rust/spawn_threads/src/: main.rs
rust/spawn_threads_reuse/: Cargo.toml
rust/spawn_threads_reuse/src/: main.rs
rust/third-party-lib/: Cargo.toml
rust/third-party-lib-wasm/: Cargo.toml  build.rs
rust/third-party-lib-wasm/src/: lib.rs  main.rs  wasm.rs
rust/third-party-lib/src/: functions.rs  lib.rs
rust/trait-example/src/: aggregator.rs  main.rs
rust/use-third-party-lib/: Cargo.toml
rust/use-third-party-lib/src/: main.rs
rust/use-third-party-lib/src/lib/: libthird_party_lib.dylib
