[package]
name = "third-party-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# Creates a ***.rlib file
#crate-type = ["staticlib"]
# Generate .dylib file
#crate-type = ["cdylib"]
crate-type = ["staticlib"]

[dependencies]
